Fix word break in result card

--- a/www/style.css
+++ b/www/style.css
@@ -14,6 +14,9 @@
 
 .card-result {
     background-color:#eff5fb;
+}
+
+.card-result a {
     word-break: break-all;
 }
 
